--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,33 @@
-# Avoid accidental Sketch file upload 
-###############################################
-## Please do not remove line 5 - thanks! 🙂 ##
-###############################################
-*.sketch
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Avoid accidental XD or Figma upload if you convert the design file
-#######################################################
-## Please do not remove lines 11 and 12 - thanks! 🙂 ##
-#######################################################
-*.xd
-*.fig
+# Testing
+/coverage
 
-# Avoid your project being littered with annoying .DS_Store files!
+# Production
+/build
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
+.idea/
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Vercel
+.vercel
