--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
   "name": "ip-address-tracker",
   "version": 2,
-  "buildCommand": "npm run build",
+  "installCommand": "npm ci --legacy-peer-deps",
+  "buildCommand": "GENERATE_SOURCEMAP=false npm run build",
   "outputDirectory": "build",
+  "framework": "create-react-app",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -16,18 +18,6 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
         }
       ]
     }
