--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "name": "ip-address-tracker",
   "version": 2,
-  "installCommand": "npm ci --legacy-peer-deps",
+  "installCommand": "npm install --legacy-peer-deps",
   "buildCommand": "GENERATE_SOURCEMAP=false npm run build",
   "outputDirectory": "build",
   "framework": "create-react-app",
@@ -9,17 +9,6 @@
     {
       "source": "/(.*)",
       "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        }
-      ]
     }
   ]
 }
