--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,11 @@
 # Production
 /build
 
-# Environment variables
+# Environment
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 # Logs
 npm-debug.log*
